--- a/src/main/resources/af/cmr/indyli/gespro/light/trans/properties/messages_fr.properties
+++ b/src/main/resources/af/cmr/indyli/gespro/light/trans/properties/messages_fr.properties
@@ -31,9 +31,23 @@ register_submit_button=Inscription
 register_glob_matricule=Matricule
 register_matricule_required=Le Matricule est obligatoire !!!
 
+#Organization
+org_title=Liste des organisations
+org_create_title=Formulaire d'Ajout d'une Organisation
+org_update_title=Formulaire de modification d'une Orgnisation
+org_name_required=Le nom est obligatoire !!
+org_code_required=Le code est obligatoire !!
+org_submit_btn=Créer l'Organisation
+org_name=Nom
+org_code=Code Organisation
+org_adrWeb=Adresse Web
+org_phoneNumber=Numéro de Téléphone
+org_contactName=Nom du Contact
+org_contactEmail=Email du Contact
+
 #Project
-name=Name
-projrct_description=Description 
+name=Nom
+project_description=Description 
 project_amount=Quantité
 project_creationDate= Date de Creation
 project_endDate=Date de Fin
@@ -43,7 +57,12 @@ project_updateDate=Date mise à jour
 project_org=Organisation
 project_mp=Project Manager
 btn_phase=Phases
-ajout_project_text=Formulaire Ajout Projet
+ajout_project_text=Formulaire d'Ajout d'un Projet
+update_project_text=Formulaire de modification d'un Projet
+project_name_required=Le nom est obligatoire !!
+project_description_required=La description est obligatoire !!
+project_organization=Choisir une Organisation
+project_chefProjet=Choisir un Chef de Projet
 
 #Phase
 description=Description 
