--- a/src/main/resources/af/cmr/indyli/gespro/light/trans/properties/messages_fr.properties
+++ b/src/main/resources/af/cmr/indyli/gespro/light/trans/properties/messages_fr.properties
@@ -31,6 +31,9 @@ register_submit_button=Inscription
 register_glob_matricule=Matricule
 register_matricule_required=Le Matricule est obligatoire !!!
 
+#Project Manager
+pm_update_title=Formulaire de modification d'un Chef de Projet
+
 #Organization
 org_title=Liste des organisations
 org_create_title=Formulaire d'Ajout d'une Organisation
@@ -65,6 +68,7 @@ project_organization=Choisir une Organisation
 project_chefProjet=Choisir un Chef de Projet
 
 #Phase
+phase_title=Liste des projets
 description=Description 
 amount=Quantité
 creationDate= Date de Creation
@@ -74,3 +78,17 @@ startDate=Date Debute
 updateDate=Date mise à jour
 status=Status 
 isended=Est terminé
+ajout_phase_text=Formulaire d'Ajout d'une Phase
+phase_code=Code Phase
+phase_code_required=Le code est obligatoire !!
+phase_project=Projet
+update_phase_text=Formulaire de modification d'une Phase
+phase_description=Description
+phase_description_required=La description est obligatoire !!
+phase_startDate=Date de début
+phase_endDate=Date de fin
+phase_amount=Quantité
+phase_status=Statut
+phase_isEnded=Est terminé
+phase_creationDate=Date de Création
+phase_updateDate=Date de Mise à Jour
